RESOLVED FIXED 272797
REGRESSION(277566@main): [Win] SHOULD NEVER BE REACHED in JSC::IPInt::initialize
https://bugs.webkit.org/show_bug.cgi?id=272797
Summary REGRESSION(277566@main): [Win] SHOULD NEVER BE REACHED in JSC::IPInt::initialize
Fujii Hironori
Reported 2024-04-16 19:45:12 PDT
After 277566@main, WinCairo is crashing. Buildbot: builder WinCairo-64-bit-Debug-Tests build 22344 : 277570@main https://build.webkit.org/#/builders/727/builds/22344 https://build.webkit.org/results/WinCairo-64-bit-Debug-Tests/277570@main%20(22344)/animations/added-while-suspended-crash-log.txt SHOULD NEVER BE REACHED C:\BW\WinCairo-64-bit-Debug-Build\build\Source\JavaScriptCore\llint/InPlaceInterpreter.cpp(103) : initialize 1 00007FF902651CA9 WTFCrash 2 00007FF902652CC1 WTFCrashWithInfoImpl 3 00007FF8E5E78BA4 WTFCrashWithInfo<const char *> 4 00007FF8E5FB57A2 JSC::IPInt::initialize 5 00007FF8E635921F JSC::initialize::<lambda_0>::operator() 6 00007FF8E6359173 std::invoke<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\JavaScriptCore\runtime\InitializeThreading.cpp:73:30'> 7 00007FF8E634DE79 std::call_once<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\JavaScriptCore\runtime\InitializeThreading.cpp:73:30'> 8 00007FF8E634DDF4 JSC::initialize 9 00007FF8EB52FF2A WebKit::InitializeWebKit2 10 00007FF8EB53CEE0 API::Object::Object 11 00007FF8EB53D618 API::ObjectImpl<10>::ObjectImpl 12 00007FF8EB53CB0D API::Dictionary::Dictionary 13 00007FF8EB53CAD7 API::Dictionary::create 14 00007FF8EB53CA7E API::Dictionary::create 15 00007FF8EB54132D WKMutableDictionaryCreate 16 00007FF776A556C7 WTR::WebNotificationProvider::WebNotificationProvider 17 00007FF7769DCD56 WTR::TestController::TestController 18 00007FF776A69F5D main 19 00007FF776E48A84 __scrt_common_main_seh 20 00007FF903F24DE0 BaseThreadInitThunk 21 00007FF91541EC4B RtlUserThreadStart
Attachments
Fujii Hironori
Comment 1 2024-04-16 19:45:33 PDT
This can be worked around by setting a env var. $env:JSC_useIPIntWrappers = 0
Fujii Hironori
Comment 2 2024-04-16 19:50:11 PDT
EWS
Comment 3 2024-04-16 21:38:54 PDT
Committed 277592@main (6df4bb802507): <https://commits.webkit.org/277592@main> Reviewed commits have been landed. Closing PR #27363 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-04-16 21:39:16 PDT
Note You need to log in before you can comment on or make changes to this bug.