REGRESSION(277566@main): [Win] SHOULD NEVER BE REACHED in JSC::IPInt::initialize https://bugs.webkit.org/show_bug.cgi?id=272797

Reviewed by Ross Kirsling.

Windows port was crashing after 277566@main. IPInt doesn't support
Windows port yet. useIPIntWrappers should be false for Windows port.

* Source/JavaScriptCore/runtime/Options.cpp:
Disabled the option for platforms not supporting IPInt.

Canonical link: https://commits.webkit.org/277592@main